update the jupyterbook manuscript for supporting information figure setup

--- a/jupyterbook/_config.yml
+++ b/jupyterbook/_config.yml
@@ -30,12 +30,13 @@ repository:
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
-  logo: _static/m3-light.png  # fallback
+  logo: _static/m3-light.png
   theme:
     name: sphinx_book_theme
     logo:
       image_light: _static/m3-light.png
       image_dark: _static/m3-dark.png
+
 
 sphinx:
   config:
@@ -46,5 +47,5 @@ sphinx:
       table: "Table %s"
       code-block: "Listing %s"
       section: "Section %s"
-      
-    numfig_secnum_depth: 1
+    suppress_warnings:
+      - myst.xref_missing
